tests/valid/Property_Valid_25.whiley
property wrap(int x) -> (int[] r):
    [x]

public export method test():
    assert wrap(1) == [1]