tests/invalid/Parsing_Invalid_8.whiley
function f() -> (int r):
     x = 1